// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LayoutList /> as horizontal list with additional className matches its snapshot 1`] = `
<ul
  className=
      y-layoutList
      TEST_CLASSNAME
      {
        display: flex;
        flex-flow: row wrap;
        list-style: none;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item {
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0.4rem;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item:last-child {
        margin-right: 0px;
      }
/>
`;

exports[`<LayoutList /> as horizontal list with align "right" matches its snapshot 1`] = `
<ul
  className=
      y-layoutList
      {
        display: flex;
        flex-flow: row wrap;
        justify-content: flex-end;
        list-style: none;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item {
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0.4rem;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item:last-child {
        margin-right: 0px;
      }
/>
`;

exports[`<LayoutList /> as horizontal list with child content matches its snapshot 1`] = `
<ul
  className=
      y-layoutList
      {
        display: flex;
        flex-flow: row wrap;
        list-style: none;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item {
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0.4rem;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item:last-child {
        margin-right: 0px;
      }
>
  list content
</ul>
`;

exports[`<LayoutList /> as horizontal list with gutterSize matches its snapshot 1`] = `
<ul
  className=
      y-layoutList
      {
        display: flex;
        flex-flow: row wrap;
        list-style: none;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item {
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 1.6rem;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item:last-child {
        margin-right: 0px;
      }
/>
`;

exports[`<LayoutList /> as horizontal list without props matches its snapshot 1`] = `
<ul
  className=
      y-layoutList
      {
        display: flex;
        flex-flow: row wrap;
        list-style: none;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item {
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0.4rem;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item:last-child {
        margin-right: 0px;
      }
/>
`;

exports[`<LayoutList /> as vertical list with LayoutListItem child content matches its snapshot 1`] = `
<ul
  className=
      y-layoutList
      {
        display: block;
        list-style: none;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item {
        display: block;
        margin-bottom: 0;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item:last-child {
        margin-bottom: 0px;
      }
>
  <LayoutListItem
    className="TEST_CLASSNAME"
  />
</ul>
`;

exports[`<LayoutList /> as vertical list with additional className matches its snapshot 1`] = `
<ul
  className=
      y-layoutList
      TEST_CLASSNAME
      {
        display: block;
        list-style: none;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item {
        display: block;
        margin-bottom: 0;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item:last-child {
        margin-bottom: 0px;
      }
/>
`;

exports[`<LayoutList /> as vertical list with child content matches its snapshot 1`] = `
<ul
  className=
      y-layoutList
      {
        display: block;
        list-style: none;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item {
        display: block;
        margin-bottom: 0;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item:last-child {
        margin-bottom: 0px;
      }
>
  list content
</ul>
`;

exports[`<LayoutList /> as vertical list with gutterSize matches its snapshot 1`] = `
<ul
  className=
      y-layoutList
      {
        display: block;
        list-style: none;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item {
        display: block;
        margin-bottom: 0.8rem;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item:last-child {
        margin-bottom: 0px;
      }
/>
`;

exports[`<LayoutList /> as vertical list without props matches its snapshot 1`] = `
<ul
  className=
      y-layoutList
      {
        display: block;
        list-style: none;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item {
        display: block;
        margin-bottom: 0;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
      }
      & > .y-layoutList--item:last-child {
        margin-bottom: 0px;
      }
/>
`;
